Maven: enable/disable auto-import option + changes notificator

--- a/plugins/maven/src/main/resources/META-INF/plugin.xml
+++ b/plugins/maven/src/main/resources/META-INF/plugin.xml
@@ -116,6 +116,9 @@
     <component>
       <implementation-class>org.jetbrains.idea.maven.utils.MavenEditorTabTitleUpdater</implementation-class>
     </component>
+    <component>
+      <implementation-class>org.jetbrains.idea.maven.utils.MavenImportNotifier</implementation-class>
+    </component>
   </project-components>
 
   <actions>
