--- a/plugins/maven/src/main/resources/ProjectBundle.properties
+++ b/plugins/maven/src/main/resources/ProjectBundle.properties
@@ -18,10 +18,11 @@ maven.downloading.artifact=Downloading {0}
 maven.transfer.progress={0}/{1}K  [{2}] {3}
 maven.transfer.start=Checking [{0}] {1}
 
-maven.project.pom.file.has.been.changed=The pom.xml has been changed.
-
-maven.project.import=Import
-maven.project.reimport=Re-import
+maven.project.changed={0} Maven project{1} been changed.
+maven.project.something.changed=Some settings have been changed that require reimport.
+maven.project.import.changed=Import Changes
+maven.project.import.all=Force Reimport All
+maven.project.import.enable.auto=Enable Auto-Import
 maven.project.importing=Importing Maven projects
 maven.project.importing.finished=Finished importing Maven projects
 maven.project.import.waiting.for.active.process=Waiting for an active process
