--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1026,8 +1026,8 @@ project.import.wizard.title=Import from {0}
 project.import.default.name=ImportedFrom{0}
 project.import.select.title=Select {0} projects to import
 project.import.show.settings.after=&Open Project Structure after import
-project.import.open.existing=There is ''{0}'' found in ''{1}''.\nDo you want to proceed with re-importing ''{2}'' or open the existing project?
-project.import.open.existing.reimport=Re-import
+project.import.open.existing=There is ''{0}'' found in ''{1}''.\nDo you want to proceed with reimporting ''{2}'' or open the existing project?
+project.import.open.existing.reimport=Reimport
 project.import.open.existing.openExisting=Open the existing
 
 general.settings=General Settings
