--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -237,9 +237,11 @@ action.Exit.text=E_xit
 action.Exit.description=Quit IDEA
 group.EditMenu.text=_Edit
 action.$Undo.text=_Undo {0}
-action.$Undo.description=Undo last operation
+action.$Undo.description=Undo {0}
+action.$Undo.description.empty=last operation
 action.$Redo.text=_Redo {0}
-action.$Redo.description=Redo last undone operation
+action.$Redo.description=Redo {0}
+action.$Redo.description.empty=last undone operation
 action.$Cut.text=Cu_t
 action.$Cut.description=Cut to clipboard
 action.$Copy.text=_Copy
