once again, don't red-highlight inner enums in groovy (IDEADEV-40541)

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -269,8 +269,8 @@ cannot.have.static.declarations=Inner classes cannot have static declarations
 unknown.class=unknown class ''{0}''
 is.not.enclosing.class=''{0}'' is not an enclosing class
 package.definition.cannot.have.modifiers=Package definiton cannot have modifiers
-inner.classes.are.not.suported=Inner classes are not supported in Groovy {0}
-anonymous.classes.are.not.suported=Anonymous classes are not supported in Groovy {0}
+inner.classes.are.not.supported=Inner classes are not supported in Groovy {0}
+anonymous.classes.are.not.supported=Anonymous classes are not supported in Groovy {0}
 
 ########################################################################################################################
 # Facet configuration
