IDEA-22931 (naming conventions not checked for some static finals)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1107,9 +1107,10 @@ annotation.naming.convention.problem.descriptor.regex.mismatch=Annotation name <
 class.name.convention.problem.descriptor.short=Class name <code>#ref</code> is too short #loc
 class.name.convention.problem.descriptor.long=Class name <code>#ref</code> is too long #loc
 class.name.convention.problem.descriptor.regex.mismatch=Class name <code>#ref</code> doesn''t match regex ''{0}'' #loc
-constant.name.convention.problem.descriptor.short=Constant name <code>#ref</code> is too short #loc
-constant.name.convention.problem.descriptor.long=Constant name <code>#ref</code> is too long #loc
-constant.name.convention.problem.descriptor.regex.mismatch=Constant <code>#ref</code> doesn''t match regex ''{0}'' #loc
+constant.naming.convention.problem.descriptor.short=Constant name <code>#ref</code> is too short #loc
+constant.naming.convention.problem.descriptor.long=Constant name <code>#ref</code> is too long #loc
+constant.naming.convention.problem.descriptor.regex.mismatch=Constant <code>#ref</code> doesn''t match regex ''{0}'' #loc
+constant.naming.convention.immutables.option=Only check static final fields with immutable types
 convention.pattern.option=Pattern:
 convention.min.length.option=Min Length:
 convention.max.length.option=Max Length:
@@ -1155,6 +1156,7 @@ static.method.naming.convention.problem.descriptor.regex.mismatch=Static method 
 static.variable.naming.convention.problem.descriptor.short=Static variable name <code>#ref</code> is too short #loc
 static.variable.naming.convention.problem.descriptor.long=Static variable name <code>#ref</code> is too long #loc
 static.variable.naming.convention.problem.descriptor.regex.mismatch=Static variable <code>#ref</code> doesn''t match regex ''{0}'' #loc
+static.variable.naming.convention.mutable.option=Check static final fields with a mutable type
 type.parameter.naming.convention.problem.descriptor.short=Type parameter name <code>#ref</code> is too short #loc
 type.parameter.naming.convention.problem.descriptor.long=Type parameter name <code>#ref</code> is too long #loc
 boolean.method.name.must.start.with.question.table.column.name=Boolean method name prefix
