--- a/platform/platform-resources-en/src/messages/ProjectBundle.properties
+++ b/platform/platform-resources-en/src/messages/ProjectBundle.properties
@@ -94,8 +94,8 @@ sdk.configure.general.home.path=SDK home path:
 sdk.configure.home.invalid.error=The selected directory is not a valid home for {0}
 sdk.configure.home.file.invalid.error=The selected file is not a valid home for {0}
 sdk.configure.home.title=Select Home Directory for {0}
-sdk.configure.javadoc.url.prompt=Enter javadoc URL:
-sdk.configure.javadoc.url.title=Specify Javadoc URL
+sdk.configure.javadoc.url.prompt=Enter documentation URL:
+sdk.configure.javadoc.url.title=Specify documentation URL
 project.index.scanning.files.progress=Scanning files...
 project.index.building.exclude.roots.progress=Building exclude roots...
 project.index.processing.module.content.progress=Processing module \"{0}\" content...
@@ -157,9 +157,9 @@ module.libraries.target.jdk.module.radio=&Module SDK:
 module.libraries.target.jdk.select.title=Select Project JDK
 module.libraries.unknown.item=Unknown
 module.libraries.rename.button=&Rename Library
-module.libraries.javadoc.url.button=Specify JavaDoc &URL...
+module.libraries.javadoc.url.button=Specify Documentation &URL...
 module.libraries.remove.button=R&emove
-module.libraries.javadoc.attach.button=Attach &JavaDoc...
+module.libraries.javadoc.attach.button=Attach D&ocumentation...
 module.libraries.attach.sources.button=Attach &Sources...
 module.libraries.attach.classes.button=Attach &Classes...
 module.libraries.add.button=&Add Library...
