CVS login refactored: do not immediately go to AWT thread when login

--- a/plugins/cvs/cvs-core/src/com/intellij/cvsSupport2/CvsBundle.properties
+++ b/plugins/cvs/cvs-core/src/com/intellij/cvsSupport2/CvsBundle.properties
@@ -129,6 +129,7 @@ error.message.ssh.further.authentication.required=SSH Server rejected access. Th
 error.message.ssh.public.key.acceptable=SSH Server rejected access. The public key provided is acceptable for authentication.
 error.message.ssh.private.key.authentication.failed=Server rejected access for this combination of user name and private key.
 exception.text.cannot.connect.with.invalid.root=createConnection() could not be called (invalid cvs root)
+exception.text.cannot.do.setoffline.with.invalid.root=setOffline() could not be called (invalid cvs root)
 error.message.incorrect.tag.name=Tag name {0}
 exception.text.unsupported.method=Unsupported method: {0}
 exception.text.ext.server.rejected.access=Server rejected access
@@ -410,7 +411,8 @@ action.Cvs.BrowseChanges.text=Brow_se Changes...
 action.Cvs.BrowseChanges.description=Browse CVS changes
 action.Cvs.ToggleOffline.text=_Work Offline
 action.Cvs.ToggleOffline.description=Toggle offline mode for CVS root containing selected file
-
+set.online.notification.text=Set to online mode
+set.offline.notification.text=Set to offline mode
 plugin.CVS.description=Provides integration with CVS version control system
 adding.cvsignore.files.to.cvs.action.name=Adding .cvsignore Files to CVS
 browse.repository.operation.name=Browse Repository
