IDEADEV-39212: Groovy: resovle & highlighting for labels in break and continue statements

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -271,7 +271,11 @@ is.not.enclosing.class=''{0}'' is not an enclosing class
 package.definition.cannot.have.modifiers=Package definiton cannot have modifiers
 inner.classes.are.not.supported=Inner classes are not supported in Groovy {0}
 anonymous.classes.are.not.supported=Anonymous classes are not supported in Groovy {0}
-
+undefined.label=Undefined label ''{0}''
+continue.outside.loop=The continue statement is only allowed inside loops
+break.outside.loop.or.switch=The break statement is only allowed inside loops or switches
+label.already.used=Label ''{0}'' is already in use
+break.outside.loop=The break statement with named labels is only allowed inside loops
 ########################################################################################################################
 # Facet configuration
 ########################################################################################################################
@@ -292,4 +296,3 @@ groovy.like.library.found.text=Do you want to set up Groovy for module ''{0}'' \
 with found library ''{1}'' (Groovy version {2})?
 compile.groovy.files=&Compile Groovy files
 copy.groovy.files.to.output=Copy Groovy files to output as &resources
-
