--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -61,8 +61,10 @@ action.group.groovy.description=Groovy
 # GDK & compilation
 ########################################################################################################################
 
-no.java.sdk=No Java SDK configured
-cannot.compile.groovy.files.no.facet=Cannot find Groovy home for module ''{0}''.\nPlease set up Groovy SDK.
+cannot.compile.groovy.files.no.facet=Cannot find Groovy home for module ''{0}''.\nYou should either:\n\
+- invoke 'Add Framework support' action for this module,\n\
+or:\n\
+- add Groovy jars to module classpath manually.
 cannot.compile.groovy.files.no.sdk=Cannot Compile Groovy Files.\nPlease Set up SDK for module ''{0}''.
 cannot.compile.groovy.files.no.sdk.mult=Cannot Compile Groovy Files.\nPlease Set up SDK for modules ''{0}''.
 cannot.compile=Cannot Compile
