DEBUG log pattern

--- a/platform/platform-resources-en/src/messages/DiagnosticBundle.properties
+++ b/platform/platform-resources-en/src/messages/DiagnosticBundle.properties
@@ -60,3 +60,4 @@ log.console.filter.show.errors=Show errors only
 log.console.filter.show.errors.and.warnings=Show errors and warnings
 log.console.filter.show.all=Show all
 title.submitting.error.report=Submitting error report
+log.console.filter.show.errors.warnings.and.infos=Show errors, warnings and infos
