Updated utilities used by import intentions.

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -28,9 +28,14 @@ QFIX.failed.to.add.field=<br/>Failed to add a field!<br/><br/>
 QFIX.NAME.add.method.$0.to.class.$1=Add method ''{0}''() to class {1}
 QFIX.failed.to.add.method=<br/>Failed to add a method!<br/><br/>
 
-# RemoveTrailingSemicolonQuickFix
+QFIX.action.failed=Action failed
+
 QFIX.remove.trailing.semicolon=Remove trailing semicolon
 
+# Intentions: INTN
+INTN.Family.convert.import=Convert import
+
+INTN.convert.to.from.$0.import=Convert to ''from {0} import ...''
 
 ### Surround with templates ###
 surround.with.whileelse.template=while / else
