artifact ui fixes

--- a/resources-en/src/messages/CompilerBundle.properties
+++ b/resources-en/src/messages/CompilerBundle.properties
@@ -158,7 +158,7 @@ node.text.0.with.dependencies=''{0}'' with dependencies
 element.type.name.module.output=Module Output
 element.type.name.directory=Directory
 element.type.name.archive=Archive
-artifact.type.plain=Plain
+artifact.type.plain=Other
 
 incremental.packaging.compiler.description=Incremental packaging compiler
 packaging.method.name.do.not.package=Do not package
