verifier to prevent UE plugins from loading in CE

--- a/plugins/structuralsearch/source/META-INF/plugin.xml
+++ b/plugins/structuralsearch/source/META-INF/plugin.xml
@@ -4,6 +4,7 @@
     </description>
   <version>9.0</version>
   <vendor logo="/general/ijLogo.png">JetBrains</vendor>
+  <depends>com.intellij.modules.ultimate</depends>
   <extensions defaultExtensionNs="com.intellij">
       <errorHandler implementation="com.intellij.diagnostic.ITNReporter"/>
       <inspectionToolProvider implementation="com.intellij.structuralsearch.inspection.highlightTemplate.SSRInspectionsLoader"/>
