--- a/resources-en/src/messages/DebuggerBundle.properties
+++ b/resources-en/src/messages/DebuggerBundle.properties
@@ -126,7 +126,7 @@ evaluation.error.invalid.array.size=Invalid array size
 evaluation.error.cannot.initialize.array=Cannot initialize array
 evaluation.error.cannot.evaluate.class.type=Cannot evaluate class type
 evaluation.error.cannot.resolve.constructor=Cannot resolve constructor ''{0}''
-evaluation.error.this.not.avalilable='this' is not avalilable
+evaluation.error.this.not.avalilable='this' is not available
 evaluation.error.cannot.cast.null=Cannot cast null to ''{0}''
 evaluation.error.cannot.cast.numeric=Cannot cast numeric value to ''{0}''
 evaluation.error.cannot.cast.boolean=Cannot cast boolean value to ''{0}''
