--- a/platform/platform-resources-en/src/messages/RefactoringBundle.properties
+++ b/platform/platform-resources-en/src/messages/RefactoringBundle.properties
@@ -244,7 +244,7 @@ method.does.not.have.a.body=Method {0} does not have a body.
 method.has.an.empty.body=Method {0} has an empty body.
 idea.has.not.found.any.code.that.can.be.replaced.with.method.call={0} has not found any code that can be replaced with method call
 method.duplicates.found.message={0, choice, 1#1 code fragment|2#{0,number} code fragments} found
-0.with.1.visibility.is.not.accesible.from.2={0} with {1} visibility won't be accesible from {2}
+0.with.1.visibility.is.not.accesible.from.2={0} with {1} visibility won''t be accesible from {2}
 0.contains.call.with.null.argument.for.parameter.1={0} contains call with null argument for parameter {1}
 no.members.selected=No members selected
 0.already.exists.in.the.target.class={0} already exists in the target class.
