copy refactoring can copy a mix of files and directories

--- a/platform/platform-resources-en/src/messages/RefactoringBundle.properties
+++ b/platform/platform-resources-en/src/messages/RefactoringBundle.properties
@@ -300,6 +300,7 @@ copy.files.new.name.label=New name:
 no.new.name.specified=No new name specified
 copy.files.copy.specified.files.label=Copy specified files
 copy.files.copy.specified.directories.label=Copy specified directories
+copy.files.copy.specified.mixed.label=Copy specified files and directories
 copy.files.to.directory.label=To directory:
 the.file.will.be.copied.to.this.directory=The file will be copied to this directory
 copy.files.clone.title=Clone
