--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -84,7 +84,7 @@ identifier.expected=Identifier expected
 import.not.allowed=Imports are not allowed inside blocks
 identifier.or.block.expected=Identifier or code block expected
 package.keyword.expected='package' expected
-string.end.expected=GString ending expected
+string.end.expected=String end expected
 regex.end.expected=Regex ending expected
 mult.expression.expected=Multiplicative expression expected
 closure.op.expected='->' expected
