--- a/plugins/spellchecker/src/com/intellij/spellchecker/util/SpellCheckerBundle.properties
+++ b/plugins/spellchecker/src/com/intellij/spellchecker/util/SpellCheckerBundle.properties
@@ -1,12 +1,12 @@
-change.to.0=Change to ''{0}''
-change.to=Change to...
-rename.to.0=Rename to ''{0}''
-rename.to=Rename to...
+change.to.0=Typo: Change to ''{0}''
+change.to=Typo: Change to...
+rename.to.0=Typo: Rename to ''{0}''
+rename.to=Typo: Rename to...
 spelling=Spelling
 spellchecking.inspection.name=Typo
 comments.with.mistakes=Comments with mistakes
-word.0.1.is.misspelled=Word ''{0}'' is misspelled
-add.0.to.dictionary=Accept ''{0}'' as correct
+word.0.1.is.misspelled=Typo: In word ''{0}''
+add.0.to.dictionary=Typo: Accept ''{0}'' as correct
 class.name.with.mistakes=Class name with mistakes
 method.name.with.mistakes=Method name with mistakes
 field.name.with.mistakes=Field name with mistakes
@@ -25,4 +25,3 @@ no.suggestions=<no suggestion>
 process.code=Process code
 process.literals=Process literals
 process.comments=Process comments
-
