--- a/plugins/spellchecker/src/META-INF/plugin.xml
+++ b/plugins/spellchecker/src/META-INF/plugin.xml
@@ -9,17 +9,22 @@
 
   <application-components>
     <component>
-      <interface-class>com.intellij.spellchecker.options.CachedDictionaryState</interface-class>
-      <implementation-class>com.intellij.spellchecker.options.CachedDictionaryState</implementation-class>
+      <interface-class>com.intellij.spellchecker.state.CachedDictionaryState</interface-class>
+      <implementation-class>com.intellij.spellchecker.state.CachedDictionaryState</implementation-class>
     </component>
   </application-components>
 
   <project-components>
     <component>
-      <interface-class>com.intellij.spellchecker.options.ProjectDictionaryState</interface-class>
-      <implementation-class>com.intellij.spellchecker.options.ProjectDictionaryState</implementation-class>
+      <interface-class>com.intellij.spellchecker.state.ProjectDictionaryState</interface-class>
+      <implementation-class>com.intellij.spellchecker.state.ProjectDictionaryState</implementation-class>
+    </component>
+      <component>
+      <interface-class>com.intellij.spellchecker.state.AggregatedDictionaryState</interface-class>
+      <implementation-class>com.intellij.spellchecker.state.AggregatedDictionaryState</implementation-class>
     </component>
   </project-components>
+
 
   <actions>
     <!-- Add your actions here -->
@@ -51,7 +56,7 @@
 
     <inspectionToolProvider
         implementation="com.intellij.spellchecker.inspections.SpellCheckerInspectionToolProvider"/>
-    <nameSuggestionProvider id="DictionarySuggestionProvider" implementation="com.intellij.spellchecker.DictionarySuggestionProvider"/>
+    <nameSuggestionProvider id="DictionarySuggestionProvider" implementation="com.intellij.spellchecker.quickfixes.DictionarySuggestionProvider"/>
     <severitiesProvider implementation="com.intellij.spellchecker.SpellCheckerSeveritiesProvider"/>
     
     <spellchecker.support implementation="com.intellij.spellchecker.tokenizer.SpellcheckingStrategy"/>
