Added "Toggle alias", conflict panel, descriptions; refactored intentions.

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -33,7 +33,9 @@ QFIX.action.failed=Action failed
 QFIX.remove.trailing.semicolon=Remove trailing semicolon
 
 # Intentions: INTN
-INTN.Family.convert.import=Convert import
+INTN.Family.convert.import.unqualify=Convert 'import' to 'from ... import'
+INTN.Family.convert.import.qualify=Convert 'from ... import' to 'import'
+INTN.Family.toggle.import.alias=Toggle import alias
 
 INTN.convert.to.from.$0.import=Convert to ''from {0} import ...''
 
