Strings went to resources; only one copy of isIdentifier() left.

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -39,6 +39,14 @@ INTN.Family.toggle.import.alias=Toggle import alias
 
 INTN.convert.to.from.$0.import=Convert to ''from {0} import ...''
 
+INTN.alias.for.$0.dialog.title=Alias for ''{0}''?
+
+# Conflict checker
+CONFLICT.name.$0.obscured=Name ''{0}'' obscured by local definitions
+CONFLICT.name.$0.obscured.cannot.convert=Name ''{0}'' obscured. Cannot convert.
+CONFLICT.occurrence.sing=occurrence
+CONFLICT.occurrence.pl=occurrences
+
 ### Surround with templates ###
 surround.with.whileelse.template=while / else
 surround.with.return.template=return
