--- a/platform/platform-resources-en/src/messages/ProjectBundle.properties
+++ b/platform/platform-resources-en/src/messages/ProjectBundle.properties
@@ -338,7 +338,7 @@ choose.modules.dialog.title=Choose modules
 choose.modules.dialog.description=<html>Library '' {0}'' will be added to the selected modules.</html>
 project.roots.module.jdk.problem.message=Module JDK is not defined.
 project.roots.module.duplicate.name.message=Duplicate module name
-project.roots.library.problem.message=Classpath {0, choice, 1#entry is invalid: |2#entries are invalid: \n}
+project.roots.library.problem.message=Classpath entry is invalid: {0}
 project.roots.project.display.name=Project
 project.roots.global.resources.display.name=Global Resources
 project.roots.modules.display.name=Modules
