Spellchecker: fix typos in properties

--- a/plugins/spellchecker/src/com/intellij/spellchecker/util/SpellCheckerBundle.properties
+++ b/plugins/spellchecker/src/com/intellij/spellchecker/util/SpellCheckerBundle.properties
@@ -20,7 +20,7 @@ ignored.words=Ignored Words
 enter.simple.word=Enter simple word:
 add.new.word=Add new word
 entered.word.0.is.mixed.cased.you.must.enter.simple.word=Entered word {0} is mixed cased. You must enter simple word
-entered.word.0.is.correct.you.no.need.to.add.this.in.list=Entered word {0} is correct. You no need to add this in list.
+entered.word.0.is.correct.you.no.need.to.add.this.in.list=Entered word {0} is correct. You don't need to add this in list.
 no.suggestions=<no suggestion>
 process.code=Process code
 process.literals=Process literals
