ToolWindow content tabbed/combo modes - 1

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -693,6 +693,8 @@ action.ToggleFloatingMode.text=Floating _Mode
 action.ToggleFloatingMode.description=Float/unfloat active tool window
 action.ToggleSideMode.text=Split Mode
 action.ToggleSideMode.description=Tool windows split mode on/off
+action.ToggleContentUiTypeMode.text=Tabbed Content
+action.ToggleContentUiTypeMode.description=Toggle between tabbed/combo presentation of contents
 action.NextTab.text=Select Ne_xt Tab
 action.NextTab.description=Activate next tab
 action.PreviousTab.text=Se_lect Previous Tab
