separate target for building all except artifacts added to generated Ant xml

--- a/resources-en/src/messages/CompilerBundle.properties
+++ b/resources-en/src/messages/CompilerBundle.properties
@@ -46,6 +46,7 @@ generated.ant.build.compile.modules.tests.target.comment=compile {0,choice, 1#mo
 generated.ant.build.modules.section.title=Modules
 generated.ant.build.initialization.section.title=Build initialization
 generated.ant.build.initialization.section.comment=Perform any build initialization in this target
+generated.ant.build.build.all.modules.target.name=build all modules
 generated.ant.build.build.all.target.name=build all
 generated.ant.build.building.concrete.module.section.title=Module {0}
 compiler.error.exception=Error: {0}
