--- a/plugins/spellchecker/src/com/intellij/spellchecker/util/SpellCheckerBundle.properties
+++ b/plugins/spellchecker/src/com/intellij/spellchecker/util/SpellCheckerBundle.properties
@@ -25,3 +25,5 @@ no.suggestions=<no suggestion>
 process.code=Process code
 process.literals=Process literals
 process.comments=Process comments
+link.to.settings=Manage Dictionaries
+link.to.inspection.settings=Manage spelling inspection settings
