--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -39,4 +39,4 @@ ide.tabbedPane.bufferedPaint=true
 debugger.valueTooltipAutoShow=true
 debugger.valueTooltipAutoShow.description=Auto show tooltip on mouse over
 
-filesystem.useNative=false
+filesystem.useNative=true
