--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -128,7 +128,7 @@ __builtin__.int.__sub__ = \
   :rtype: int \n\
 
 __builtin__.int.__mul__ = \
-  :type y: int or long or float or complex or string or list \n\
+  :type y: int or long or float or complex \n\
   :rtype: int \n\
 
 __builtin__.int.__floordiv__ = \
@@ -1106,6 +1106,82 @@ __builtin__.file.write = \
 
 __builtin__.file.writelines = \
   :type sequence_of_strings: collections.Iterable of string \n\
+
+
+## 9.4. decimal
+
+decimal.Decimal.as_tuple = \
+  :rtype: decimal.DecimalTuple \n\
+
+decimal.Decimal.__add__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__sub__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__mul__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__floordiv__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__mod__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__pow__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__div__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__truediv__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__radd__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__rsub__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__rmul__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__rfloordiv__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__rmod__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__rpow__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__rdiv__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__rtruediv__ = \
+  :type other: decimal.Decimal or int or long or float or complex \n\
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__pos__ = \
+  :rtype: decimal.Decimal \n\
+
+decimal.Decimal.__neg__ = \
+  :rtype: decimal.Decimal \n\
 
 
 ## 18.2. json
