Updated types for startswith() and endswith() of str/unicode (PY-5035)

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -631,7 +631,7 @@ __builtin__.str.encode = \
   :rtype: bytes \n\
 
 __builtin__.str.endswith = \
-  :type suffix: string \n\
+  :type suffix: string or tuple \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
   :rtype: bool \n\
@@ -730,7 +730,7 @@ __builtin__.str.splitlines = \
   :rtype: list of bytes \n\
 
 __builtin__.str.startswith = \
-  :type prefix: string \n\
+  :type prefix: string or tuple \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
   :rtype: bool \n\
@@ -805,7 +805,7 @@ __builtin__.unicode.encode = \
   :rtype: bytes \n\
 
 __builtin__.unicode.endswith = \
-  :type suffix: string \n\
+  :type suffix: string or tuple \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
   :rtype: bool \n\
@@ -910,7 +910,7 @@ __builtin__.unicode.splitlines = \
   :rtype: list of unicode \n\
 
 __builtin__.unicode.startswith = \
-  :type prefix: string \n\
+  :type prefix: string or tuple \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
   :rtype: bool \n\
