fixed docstring qFix name

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -91,6 +91,7 @@ QFIX.replace.function.set.with.literal=Replace function call with set literal
 #DocstringQuickFix
 QFIX.docstring.add.$0=Add docstring parameter ''{0}''
 QFIX.docstring.remove.$0=Remove docstring parameter ''{0}''
+QFIX.docstring.insert.stub=Insert docstring
 
 #RemoveDecoratorQuickFix
 QFIX.remove.decorator=Remove decorator
