--- a/python/pluginSrc/META-INF/plugin.xml
+++ b/python/pluginSrc/META-INF/plugin.xml
@@ -24,6 +24,7 @@
     <frameworkSupport implementation="com.jetbrains.python.facet.PythonFrameworkSupportProvider"/>
     <frameworkSupport implementation="com.jetbrains.django.facet.DjangoFacetSupportProvider"/>
     <frameworkSupport implementation="com.jetbrains.appengine.facet.AppEngineFacetSupportProvider"/>
+    <projectStructureDetector implementation="com.jetbrains.python.module.PyProjectStructureDetector"/>
     <moduleConfigurationEditorProvider implementation="com.jetbrains.python.module.PythonModuleConfigurationEditorProvider"/>
     <applicationService serviceInterface="com.jetbrains.python.run.PyCommonOptionsFormFactory"
                         serviceImplementation="com.jetbrains.python.run.PyPluginCommonOptionsFormFactory"/>
