Added overloaded types to Python stdlib type provider (PY-4401)

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -42,6 +42,18 @@ __builtin__.filter = \
   :type sequence: collections.Iterable \n\
   :rtype: list \n\
 
+__builtin__.filter.1 = \
+  :type sequence: bytes \n\
+  :rtype: bytes \n\
+
+__builtin__.filter.2 = \
+  :type sequence: unicode \n\
+  :rtype: unicode \n\
+
+__builtin__.filter.3 = \
+  :type sequence: tuple \n\
+  :rtype: tuple \n\
+
 __builtin__.getattr = \
   :type name: string \n\
   :rtype: unknown \n\
@@ -618,7 +630,7 @@ __builtin__.str.count = \
   :type sub: bytes \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.str.decode = \
   :type encoding: string \n\
@@ -640,13 +652,13 @@ __builtin__.str.find = \
   :type sub: string \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.str.index = \
   :type sub: string \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.str.isalnum = \
   :rtype: bool \n\
@@ -699,13 +711,13 @@ __builtin__.str.rfind = \
   :type sub: string \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.str.rindex = \
   :type sub: string \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.str.rpartition = \
   :type sep: string \n\
@@ -792,7 +804,7 @@ __builtin__.unicode.count = \
   :type sub: string \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.unicode.decode = \
   :type encoding: string \n\
@@ -814,13 +826,13 @@ __builtin__.unicode.find = \
   :type sub: string \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.unicode.index = \
   :type sub: string \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.unicode.isalnum = \
   :rtype: bool \n\
@@ -879,13 +891,13 @@ __builtin__.unicode.rfind = \
   :type sub: string \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.unicode.rindex = \
   :type sub: string \n\
   :type start: int or long or None \n\
   :type end: int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.unicode.rpartition = \
   :type sep: string \n\
@@ -970,13 +982,13 @@ __builtin__.list.extend = \
 
 __builtin__.list.count = \
   :type value: object \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.list.index = \
   :type value: object \n\
   :type start: bool or int or long or None \n\
   :type stop: bool or int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.list.insert = \
   :type index: bool or int or long \n\
@@ -995,11 +1007,11 @@ __builtin__.tuple.index = \
   :type value: object \n\
   :type start: bool or int or long or None \n\
   :type stop: bool or int or long or None \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.tuple.count = \
   :type value: object \n\
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.tuple.__add__ = \
   :type y: tuple \n\
@@ -1095,7 +1107,7 @@ __builtin__.file.seek = \
   :type whence: int \n\
 
 __builtin__.file.tell = \
-  :rtype: int or long \n\
+  :rtype: int \n\
 
 __builtin__.file.truncate = \
   :type size: int or long \n\
