Types for tuple iterator vars in for loops and list comprehensions (PY-5184)

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -35,7 +35,11 @@ __builtin__.divmod = \
 
 __builtin__.enumerate.__init__ = \
   :type iterable: collections.Iterable \n\
-  :type start: int or long\n\
+  :type start: int or long \n\
+  :rtype: enumerate of (int, unknown) \n\
+
+__builtin__.enumerate.__new__ = \
+  :rtype: enumerate of (int, unknown) \n\
 
 __builtin__.filter = \
   :type function_or_none: collections.Callable or None \n\
@@ -594,6 +598,9 @@ __builtin__.complex.__neg__ = \
 
 ## 5.6. Sequence types
 
+__builtin__.str.__init__ = \
+  :rtype: bytes \n\
+
 __builtin__.str.__add__ = \
   :type y: string \n\
   :rtype: bytes \n\
@@ -768,6 +775,9 @@ __builtin__.str.upper = \
 __builtin__.str.zfill = \
   :type width: int or long \n\
   :rtype: bytes \n\
+
+__builtin__.unicode.__init__ = \
+  :rtype: unicode \n\
 
 __builtin__.unicode.__add__ = \
   :type y: string \n\
